--- a/style.css
+++ b/style.css
@@ -2,12 +2,18 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  position:fixed;
+  width: 100%;
+  top:0;
+  z-index: 1;
+    
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   color: #f2f2f2;
+  display: block;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -186,7 +192,7 @@ li {
     border:solid;
     font-size: 2rem;
     border-color: white;
-    padding: 1rem;
+    padding: 1.5rem;
     
 }
 p.red{
